--- a/css/style.css
+++ b/css/style.css
@@ -104,9 +104,10 @@ body {
   background: -webkit-radial-gradient(center, #86dfff, #cff6ff);
   background: -moz-radial-gradient(center, #86dfff, #cff6ff);
   background: radial-gradient(ellipse at center, #86dfff, #cff6ff); */
-  background-color: #f8f9d2;
-  background-image: linear-gradient(-315deg, #f8f9d2 0%, #e8dbfc 74%);
-  
+  background: #50C9C3;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #96DEDA, #50C9C3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
@@ -331,8 +332,10 @@ section {
 }
 
 section.alt {
-  background-color: #d9e4f5;
-  background-image: linear-gradient(315deg, #d9e4f5 0%, #f5e3e6 74%);
+  background: #50C9C3;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #96DEDA, #50C9C3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
 }
 
 /* 1.6. Horizontal rules
