--- a/css/style.css
+++ b/css/style.css
@@ -104,9 +104,10 @@ body {
   background: -webkit-radial-gradient(center, #86dfff, #cff6ff);
   background: -moz-radial-gradient(center, #86dfff, #cff6ff);
   background: radial-gradient(ellipse at center, #86dfff, #cff6ff); */
-  background: #50C9C3;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #96DEDA, #50C9C3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #bcf0c5;
+														background-image: linear-gradient(
+													180deg, #08AEEA 0%, #2AF598 100%);
+														box-shadow: inset 0 0 0 2000px rgb(45 50 41 / 0%);
 
   
   color: #ffffff;
@@ -154,6 +155,16 @@ background: linear-gradient(to right, #96DEDA, #50C9C3); /* W3C, IE 10+/ Edge, F
 
 .my-float1 {
   margin-top: 16px;
+}
+
+.bg-overlay {
+  background-color: rgba(4, 3, 3, 0.95);
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
 #landing-content {
@@ -219,7 +230,7 @@ h4 {
 }
 
 h5 {
-  font-size: 1.1em;
+  font-size: 2.1em;
   line-height: 1.6em;
 }
 
@@ -267,7 +278,7 @@ a:hover {
   -----------------------------------------------------------*/
 
 .btn {
-  border-radius: 20%;
+  border-radius: 10%;
   cursor: pointer;
   display: inline-block;
   font-family: 'Montserrat', sans-serif;
@@ -332,9 +343,10 @@ section {
 }
 
 section.alt {
-  background: #50C9C3;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #96DEDA, #50C9C3); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #86dfff;
+    background: -webkit-radial-gradient(center, #86dfff, #cff6ff);
+    background: -moz-radial-gradient(center, #86dfff, #cff6ff);
+    background: radial-gradient(ellipse at center, #86dfff, #cff6ff);
   
 }
 
@@ -459,7 +471,7 @@ form {
 
 fieldset {
   border: 0;
-  margin: 0 0 30px;
+  margin: 0 0 15px;
   padding: 0;
 }
 
@@ -482,7 +494,7 @@ textarea {
   color: #888888;
   display: block;
   font-family: 'Montserrat', sans-serif;
-  height: 4em;
+  height: 2em;
   padding: 0 1em;
   width: 100%;
 }
@@ -658,7 +670,10 @@ q footer:before {
 }
 
 .header .nav-bar {
-  background: #fcf6f5;
+  background: #bcf0c5;
+														background-image: linear-gradient(
+													180deg, #08AEEA 0%, #2AF598 100%);
+														box-shadow: inset 0 0 0 2000px rgb(45 50 41 / 0%);
 }
 
 /* 2.1. Logo
@@ -1067,7 +1082,7 @@ q footer:before {
 }
 
 .title h6 {
-  color: #ffce00;
+  color: #686868;
   margin: 0.5em 0 0;
 }
 
@@ -2400,7 +2415,14 @@ q footer:before {
 
 /* 6.2. Tablets
   -----------------------------------------------------------*/
-
+@media (max-width: 480px) {
+  h5 {
+    font-size: 1.3em;
+    line-height: 1.6em;
+  }
+ 
+  
+}
 @media (max-width: 991px) {
   big {
     font-size: 1.25em;
@@ -2801,7 +2823,9 @@ q footer:before {
   }
 
   .promo .tint {
-    background: #ffce00;
+    background: #50C9C3;
+    background: -webkit-linear-gradient(to right, #96DEDA, #50C9C3);
+    background: linear-gradient(to right, #96DEDA, #50C9C3);
     opacity: 0.8;
   }
 
@@ -2907,7 +2931,7 @@ q footer:before {
   z-index: 10;
   margin:auto;
   width: 50%;
-  top: -20%;
+  top: -40%;
   height: auto;
   max-height: 50px;
 }
